; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_intf.c_WallPaperCallback.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_intf.c_WallPaperCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@VOUT_WINDOW_STATE_BELOW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c"fullscreen\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"video-on-top\00", align 1
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i64, i64, i8*)* @WallPaperCallback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @WallPaperCallback(i32* %0, i8* %1, i64 %2, i64 %3, i8* %4) #0 {
  %6 = alloca %struct.TYPE_4__, align 8
  %7 = alloca %struct.TYPE_4__, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i64 %2, i64* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  store i64 %3, i64* %13, align 8
  store i32* %0, i32** %8, align 8
  store i8* %1, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %14 = load i32*, i32** %8, align 8
  store i32* %14, i32** %11, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %5
  %19 = load i32*, i32** %11, align 8
  %20 = load i32, i32* @VOUT_WINDOW_STATE_BELOW, align 4
  %21 = call i32 @vout_ChangeWindowState(i32* %19, i32 %20)
  %22 = load i32*, i32** %11, align 8
  %23 = call i32 @vout_ChangeFullscreen(i32* %22, i32* null)
  br label %29

24:                                               ; preds = %5
  %25 = load i32*, i32** %8, align 8
  %26 = call i32 @var_TriggerCallback(i32* %25, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @var_TriggerCallback(i32* %27, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  br label %29

29:                                               ; preds = %24, %18
  %30 = load i8*, i8** %9, align 8
  %31 = load i8*, i8** %10, align 8
  %32 = load i32, i32* @VLC_SUCCESS, align 4
  ret i32 %32
}

declare dso_local i32 @vout_ChangeWindowState(i32*, i32) #1

declare dso_local i32 @vout_ChangeFullscreen(i32*, i32*) #1

declare dso_local i32 @var_TriggerCallback(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
